--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
   <head>
-    <title><%= h(yield(:title) || "Untitled") %></title>
+    <title><%= h(yield(:title) || "OSU Ruby on Rails") %></title>
     <%= javascript_include_tag 'jquery', 'application' %>
     <%= stylesheet_link_tag 'application' %>
     <%= yield(:head) %>
