--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,26 +1,16 @@
+<% content_for :banner do %>
+  <%= render :partial => 'banner' %>
+<% end %>
 
-<table>
-  <tr>
-    <th>What</th>
-    <th>Description</th>
-    <th>Approved</th>
-    <th>When</th>
-    <th>Where</th>
-    <th>Speaker</th>
-  </tr>
-  <% for event in @events %>
-    <tr>
-      <td><%=h event.what %></td>
-      <td><%=h event.description %></td>
-      <td><%=h event.approved %></td>
-      <td><%=h event.when %></td>
-      <td><%=h event.where %></td>
-      <td><%=h event.speaker_id %></td>
-      <td><%= link_to "Show", event %></td>
-      <td><%= link_to "Edit", edit_event_path(event) %></td>
-      <td><%= link_to "Destroy", event, :confirm => 'Are you sure?', :method => :delete %></td>
-    </tr>
+<div id='events'>
+  <h3>Upcoming Events</h3>
+  <% @events.each do |event| %>
+    <div class='event'>
+      <h1><%= link_to "#{event.what}", event_path(event) %></h1>
+      <h4><%= "7pm @ #{event.where} w/ #{event.speaker.name}" %></h4>
+      <p><%= "#{event.description}" %></p>
+      <h5><%= "#{event.comments.count} Comments " %>
+    </div>
   <% end %>
-</table>
+</div>
 
-<p><%= link_to "New Event", new_event_path %></p>
