--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -29,7 +29,7 @@ body > #wrap {
   width: 60em;
   background-color: #999;
   height: 3em;
-  border-bottom: 1px solid #333;
+  border-bottom: 1px solid #888;
   -moz-box-shadow: 0px 0px 4px rgba(0,0,0,0.55);
   -khtml-box-shadow: 0px 0px 4px rgba(0,0,0,0.55);
   -webkit-box-shadow: 0px 0px 4px rgba(0,0,0,0.55);
@@ -85,6 +85,8 @@ ul#navigation li a:hover {
 }
 
 
+/* start banner */
+
 img#logo {
   width: 350px;
   position: relative;
@@ -138,8 +140,7 @@ div.actions {
   bottom: 0;
   position: relative;
   top: 235px;
-  left: 125px;
-  width: 300px;
+  left: 35px;
 }
 
 div.actions a.speak {
@@ -147,6 +148,7 @@ div.actions a.speak {
   color: #FFF;
   background-image: url(/images/speaker_gradient_static.png);
   background-repeat: repeat-x;
+  background-color: #AFB4B1;
   text-shadow: 0px 1px 1px #444;
   border: 1px solid #bfc1bf;
 }
@@ -164,6 +166,7 @@ div.actions a.join {
   border: 1px solid #3ecb33;
   color: #FFF;
   text-shadow: 0px 1px 1px #0d6806;
+  background-color: #00CD0E;
   background-image: url(/images/join_gradient_static.png);
   background-repeat: repeat-x;
 }
@@ -193,6 +196,47 @@ div#tagline {
   text-shadow: 0px 0px 7px #000;
 }
 
+/* end banner */
+
+/* start styling events */
+
+h3 {
+  font-family: 'Times', 'Georgia', Arial, Serif;
+  font-weight: lighter;
+  font-style: italic;
+  margin-bottom: 20px;
+  color: #a7a7a7;
+}
+
+div#events {
+  width: 37em;
+  margin: 0 25px 0 25px;
+  padding-bottom: 25px;
+}
+
+div.event h1 {
+  color: red;
+  font-weight: lighter;
+}
+
+div.event h1 a {
+  color: red;
+  text-decoration: none;
+}
+
+div.event h4 {
+  font-size: .8em;
+  margin-bottom: 10px;
+  font-weight: lighter;
+  color: #444;
+}
+
+div.event p {
+  margin-bottom: 35px;
+  color: #222;
+}
+
+/* end styling events */
 
 /* Begin Sticky Footer Hack */
 
