--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,8 @@
         <h1>osu.rb</h1>
         <ul id='navigation'>
           <li><%= link_to 'Home', '#' %></li>
-          <li><%= link_to 'Contact Us', '#' %></li>
-          <li><%= link_to 'Products', '#' %></li>
+          <li><%= link_to 'Resources', '#' %></li>
+          <li><%= link_to 'Contact', '#' %></li>
           <% if signed_in? %>
           <li><%= link_to 'Logout', '#' %></li> 
           <% else %>
