fixed safari float error

--- a/app/views/home/_banner.html.erb
+++ b/app/views/home/_banner.html.erb
@@ -1,16 +1,14 @@
 
-  <%= image_tag '/images/osurb.png', :id => 'logo' %>
   <div id='banner'>
     <div class='actions'>
       <%= link_to 'Volunteer', '#', :class => 'button speak' %>
       <%= link_to 'Join In!', '#', :class => 'button join' %>
     </div>
     
+    <%= image_tag '/images/osurb.png', :id => 'logo' %>
     <div id='tagline'>
       <p>
-        Hey there, we are the Ruby on Rails student user group at The
-        Ohio State University. We are actively looking for new
-        student members and volunteer speakers in the community.
+        Hey there, we are the Ruby on Rails student user group at The Ohio State University. We are actively looking for new student members and volunteer speakers in the community.
       </p>
     </div>
   </div>
