added announcements and barely styled some pages

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -24,7 +24,7 @@
       end up kickin' it for a an additional hour or two. We are currently
       working on getting more student and professional speakers 
       involved. Come to learn, speak or just hang out. 
-      <%= link_to 'Sign up', new_user_path %> and 
+      <%= link_to 'Sign up', sign_up_path %> and 
       check out the resources page!
     </p>
   </div>
