--- a/app/views/events/_banner.html.erb
+++ b/app/views/events/_banner.html.erb
@@ -1,8 +1,8 @@
 
   <div id='banner'>
     <div class='actions'>
-      <%= link_to 'Volunteer', '#', :class => 'button speak' %>
-      <%= link_to 'Join In!', '#', :class => 'button join' %>
+      <%= link_to 'Volunteer', '', :class => 'button speak' %>
+      <%= link_to 'Join In!', 'sign_up', :class => 'button join' %>
     </div>
     
     <%= image_tag '/images/osurb.png', :id => 'logo' %>
