--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,52 @@
 <% content_for :banner do %>
   <%= render :partial => 'banner' %>
 <% end %>
-<div class='events'>
-  <h2>Upcoming Events</h2>
-  <% @upcoming_events.each do |event| %>
-    <%= render :partial => 'event', :locals => { :event => event } %>
+
+<div id='events'>
+  <h3>Events and Announcements</h3>
+  <% @listings.each do |listing| %>
+    <% if listing.class.name == "Event" %>
+      <div class='event'>
+        <h1><%= link_to "#{listing.what}", event_path(listing) %></h1>
+        <h4><%= "7pm @ #{listing.where} w/ #{listing.speaker.name}" %></h4>
+        <p><%= "#{listing.description}" %></p>
+        <h5><%= "(#{listing.comments.count} Comments)" %> <%= link_to "Add Comment", event_path(listing) %></h5>
+      </div>
+    <% else %>
+      <div class='announcement'>
+        <%= image_tag '/images/warning.png' %>
+        <h1><%= listing.title %></h1>
+        <p><%= listing.description %></p>
+        <h5><%= "(#{listing.comments.count} Comments)" %> <%= link_to "Add Comment", announcement_path(listing) %></h5>
+      </div>
+    <% end %>
   <% end %>
 </div>
+
+
+<div id='call_to_action'>
+  <h3>Get Involved!</h3>
+  <div id='students_cta'>
+    <h4><%= image_tag '/images/buckeye.png' %>  Hey Students!</h4>
+    <p>
+      We usually meet once a week for about an hour, but sometimes
+      end up kickin' it for a an additional hour or two. We are currently
+      working on getting more student and professional speakers 
+      involved. Come to learn, speak or just hang out. 
+      <%= link_to 'Sign up', sign_up_path %> and 
+      check out the resources page!
+    </p>
+  </div>
+
+  <div id='professional_cta'>
+    <h4><%= image_tag '/images/buckeye.png' %>  Hey Professionals!</h4>
+    <p>
+      Looking to give back to the community and help some undergrads
+      along the way? Well this is a perfect opportunity! We are 
+      currently looking for speakers for just about any topic. We
+      aren't limited to just RoR either, inquire <%= link_to 'here', new_event_path %>
+    </p>
+  </div>
+</div>
+<div class='clear'></div>
+
