cleaned up show page and continued styling form elements. Added bio to users model so speakers have an intro.

--- a/app/views/events/_comment.html.erb
+++ b/app/views/events/_comment.html.erb
@@ -3,5 +3,7 @@
   <p>
     <%= comment.body %>
   </p>
-  <%= link_to 'Delete Comment', event_comment_path(comment.event, comment), :confirm => 'Word?!?', :method => :delete %>
+  <% if commenter_or_admin?(comment) %>
+    <%= link_to 'Delete Comment', event_comment_path(comment.event, comment), :confirm => 'Word?!?', :method => :delete %>
+  <% end %>
 </div>
