--- a/app/views/users/_inputs.html.erb
+++ b/app/views/users/_inputs.html.erb
@@ -2,5 +2,6 @@
   <%= form.input :email %>
   <%= form.input :password %>
   <%= form.input :password_confirmation, :label => "Confirm password" %>
+  <%= form.input :bio %>
 <% end %>
 
