--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -278,9 +278,6 @@ a:hover {
     color: #444;
   }
 
-  div#page_content .events {
-    padding: 25px;
-  }
 
 
   .events h2 {
@@ -291,9 +288,9 @@ a:hover {
     font-size: 1.0em;
   }
 
-  div#events {
-    width: 35em;
-    margin: 0 25px 0 25px;
+  div.events {
+    width: 35.5em;
+    margin: 0 0 0 25px;
     padding-bottom: 25px;
     float: left;
   }
@@ -319,12 +316,19 @@ a:hover {
     float: right;
   }
 
+  .twenty_five_top {
+    padding-top: 25px;
+  }
+
+        /* start styling comments */
+
+        /* end styling comments */
 
   /* end styling events */
 
   /* start call to action */
 
-  div#call_to_action {
+  div#call_to_action, div#speaker_info {
     float: right;
     width: 18em;
     margin: 0 25px 25px 0;
@@ -332,10 +336,11 @@ a:hover {
     border-left: 1px solid #e5e5e5;
   }
 
-  div#students_cta, div#professional_cta {
+  div#students_cta, div#professional_cta, div.speaker_info {
   background: -webkit-gradient(linear, left top, left 200, from(#dbdbdb), to(#FFFFFF));  
   -moz-border-radius: 6px;
   -webkit-border-radius: 6px;
+  border-radius: 6px;
   background: -moz-linear-gradient(top, #dbdbdb, #FFFFFF 200px);
   padding: 15px;
   margin-bottom: 25px;
