changed color of comments section

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -365,9 +365,10 @@ div#call_to_action img {
 }
 
 div#comments_container {
-  background-color: #800303;
+  background-color: #a7210c;
   padding: 30px;
 }
+
 
 
 /* end call to action */
